# nascar-pool

./: .gitignore  CLAUDE.md  go.mod  package-lock.json  package.json
backend/: .env.example  go.mod  go.sum  pyproject.toml  requirements.txt
backend/cmd/server/: main.go
backend/internal/cache/: redis.go
backend/internal/database/: database.go
backend/internal/handlers/: handlers.go
backend/internal/models/: models.go
backend/migrations/: 001_schema.sql  002_seed_races.sql  003_update_drivers.sql  004_add_rollover.sql
backend/src/nascarpool/: __init__.py  __main__.py
backend/src/nascarpool/app/: __init__.py  database.py  main.py  models.py  routes.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/src/: app.css
frontend/src/lib/: api.js  api.ts  schedule.js  schedule.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/drivers/: +page.svelte
frontend/src/routes/races/: +page.svelte
frontend/src/routes/races/[id]/: +page.svelte
frontend/src/routes/races/[id]/worksheet/: +page.svelte
frontend/src/routes/schedule/: +page.svelte
frontend/src/routes/summary/: +page.svelte
frontend/static/: nascar-2026-season.csv  nascar-2026-teams-drivers.json
